update: blueprint for parent and childs routes

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PYTHONPATH=compiler/src
 
-FLASK_APP=infra.routes.apigs.py
+FLASK_APP=main.py
 FLASK_DEBUG=1
 
 APP_NAME = "Compilador que no compila XD"
